src/objects/Late_Report_Review__c.object
<CustomObject>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Late_Report_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cases__c</fullName>
        <label># Cases</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>Late Report Reviews</relationshipLabel>
        <relationshipName>Late_Report_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>IF(Cases__c =1, 1,
If(Cases__c =2,2,
IF(Cases__c &gt;=3,3,0)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Late Report Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LR-{0000}</displayFormat>
        <label>Late Report Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Late Report Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>